--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -7,7 +7,7 @@
           <i class="fas fa-link">&nbsp;</i>
         </a>
       {% endif %}
-      <span>{{ item.authors | strip }}</span>
+      <span style="font-size: 1.6rem;">{{ item.authors | strip }}</span>
       <i style="font-size: 1.6rem;">{{ item.title | strip | escape }}</i>
       <span style="font-size: 1.6rem;">{{ item.journal | strip }}</span>
       <span style="color: #999; font-size: small;">{{ item.status | strip }}</span>
