--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -10,7 +10,11 @@
       <span style="font-size: 1.6rem;">{{ item.authors | strip }}</span>
       <i style="font-size: 1.6rem;">{{ item.title | strip | escape }}</i>
       <span style="font-size: 1.6rem;">{{ item.journal | strip }}</span>
-      <span style="color: #999; font-size: small;">{{ item.status | strip }}</span>
+      {% if item.link %}
+      <span style="color: #999; font-size: small;">published</span>
+      {% else %}
+      <span style="color: #999; font-size: small;">under-review</span>
+      {% endif %}
     </div>
   </div>
   <br>
