--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,11 +31,10 @@
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
       "https://github.com/{{ site.github_username | escape }}/",
       "https://linkedin.com/in/{{ site.in_username | escape }}/",
-      "https://www.researchgate.net/profile/{{ site.gate_username | escape }}/"
+      "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}/"
     ],
     "jobTitle": "{{ site.jobTitle }}",
     "description": "{{ site.meta_description }}",
-    "email": "{{ site.email }}",
     "gender": "{{ site.gender }}",
     "affiliation": "{{ site.affiliation }}",
     "knowsAbout": "{{ site.knowsAbout }}"
