--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,9 +16,8 @@
   <meta property="og:image" content="{{ site.meta_img }}">
   <link rel="canonical" href="https://{{ site.meta_url }}/">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+  <link rel="icon" type="image/gif" href="{{ '/favicon.gif' | relative_url }}">
   <link rel="icon" type="image/png" href="{{ '/favicon-96.png' | relative_url }}" sizes="96x96">
-  <link rel="icon" type="image/png" href="{{ '/favicon-32.png' | relative_url }}" sizes="32x32">
-  <link rel="icon" type="image/png" href="{{ '/favicon-16.png' | relative_url }}" sizes="16x16">
 
   <script type="application/ld+json">
   {
