--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,13 @@
   <meta property="og:image" content="{{ site.meta_img }}">
   <link rel="canonical" href="https://{{ site.meta_url }}/">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="512x512" href="{{ 'fav/android-chrome-512x512.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="192x192" href="{{ 'fav/android-chrome-192x192.png' | relative_url }}">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ 'fav/favicon-16x16.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ 'fav/favicon-32x32.png' | relative_url }}">
+  <link rel="apple-touch-icon" href="{{ 'fav/apple-touch-icon.png' | relative_url }}">
 
   <script type="application/ld+json">
   {
