--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -8,7 +8,7 @@
         </a>
       {% endif %}
       <span style="font-size: 1.6rem;">{{ item.authors | strip }}</span>
-      <i style="font-size: 1.6rem;">{{ item.title | strip | escape }}</i>
+      <span style="font-size: 1.6rem;">{{ item.title | strip | escape }}</span>
       <span style="font-size: 1.6rem;">{{ item.journal | strip }}</span>
     </div>
   </div>
