--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -3,7 +3,7 @@
   <div class="publication">
     <div class="publication-details">
       {% if item.link %}
-        <a href="{{ item.link }}" class="external-link" target="_blank" title="Link to publication">
+        <a href="{{ item.link }}" class="external-link" target="_blank" title="PDF link">
           <i class="fas fa-link">&nbsp;</i>
         </a>
       {% endif %}
