--- a/_includes/head.html
+++ b/_includes/head.html
@@ -38,7 +38,8 @@
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
       "https://github.com/{{ site.github_username | escape }}/",
       "https://linkedin.com/in/{{ site.in_username | escape }}/",
-      "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}/"
+      "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}/",
+      "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}/"
     ],
     "jobTitle": "{{ site.jobTitle }}",
     "description": "{{ site.meta_description }}",
