--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,12 +34,12 @@
     "additionalName": "{{ site.additionalName }}",
     "image": "{{ site.meta_img }}",
     "sameAs": [
-      "https://orcid.org/{{ site.orcid_username | escape }}/",
+      "https://orcid.org/{{ site.orcid_username | escape }}",
       "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
-      "https://github.com/{{ site.github_username | escape }}/",
-      "https://linkedin.com/in/{{ site.in_username | escape }}/",
-      "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}/",
-      "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}/"
+      "https://github.com/{{ site.github_username | escape }}",
+      "https://linkedin.com/in/{{ site.in_username | escape }}",
+      "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}",
+      "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}"
     ],
     "jobTitle": "{{ site.jobTitle }}",
     "description": "{{ site.meta_description }}",
