--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,7 +39,8 @@
       "https://github.com/{{ site.github_username | escape }}",
       "https://linkedin.com/in/{{ site.in_username | escape }}",
       "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}",
-      "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}"
+      "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}",
+      "https://www.semanticscholar.org/author/{{ site.semantic_username | escape }}"
     ],
     "jobTitle": "{{ site.jobTitle }}",
     "description": "{{ site.meta_description }}",
