--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,10 @@
 <div class="container header-container">
   <div class="row">
-    <div class="col-xs-12 col-sm-4 col-md-3 header-left">
-      <span class="profile-img" style="background-image: url({{ site.about_profile_image | relative_url }})"></span>
-    </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
       <h1>{{ site.name | escape }}</h1>
       <h2>{{ site.title | escape }}</h2>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
+    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
       <ul class="icons no-print">
         {%- if site.email -%}
           <li>
