--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -9,7 +9,8 @@
       {% endif %}
       <span style="font-size: 1.6rem;">{{ item.authors | strip }}</span>
       <span style="font-size: 1.6rem;">{{ item.title | strip | escape }}</span>
-      <i style="font-size: 1.6rem;">{{ item.journal | strip }}</i>
+      <span style="font-size: 1.6rem;">{{ item.journal | strip }}</span>
+      <span style="font-size: 1.6rem;">{{ item.year | strip }}</span>
     </div>
   </div>
   <br>
