--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -11,6 +11,7 @@
       <span style="font-size: 1.6rem;">{{ item.title | strip | escape }}</span>
       <span style="font-size: 1.6rem;">{{ item.journal | strip }}</span>
       <span style="font-size: 1.6rem;">{{ item.year | strip }}</span>
+      <span style="font-size: 1.6rem;">doi:&nbsp;{{ item.doi | strip }}</span>
     </div>
   </div>
   <br>
