--- a/_includes/section-pub.html
+++ b/_includes/section-pub.html
@@ -9,7 +9,7 @@
       {% endif %}
       {% if item.pdf %}
         <a href="{{ item.pdf }}" class="external-link" target="_blank" title="PDF">
-          <img src="https://{{ site.meta_url }}/assests/icons/file-lines-regular.svg" alt="PDF" title="PDF" style="width: 24px; height: 24px;">
+          <i class="fa-regular fa-file-pdf">&nbsp;</i>
         </a>
       {% endif %}
       <span style="font-size: 1.6rem;">{{ item.authors | strip }}</span>
