--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="container footer-container">
   <p>
-    <a title="{{ site.meta_url }}" href="https://{{ site.meta_url }}/">{{ site.meta_url | escape }}</a>
+    <a title="{{ ORCID }}" href="https://orcid.org/{{ site.orcid_username }}">{{ site.orcid_username | escape }}</a>
   </p>
 </div>
