--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Nunito:100,300,400,700,500,500italic,400italic,300italic,100italic,700italic);
 html {
   box-sizing: border-box; }
 
