--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,6 +50,9 @@
   }
   </script>
   <script src="https://kit.fontawesome.com/d52278d63e.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
 </head>
