--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -43,16 +43,16 @@ background-color: transparent;
 h1 {
   font-size: 4rem;
   margin-bottom: 0.1rem;
-  font-weight: 500;
+  font-weight: 600;
 }
 
 h2 {
-  font-weight: 300;
+  font-weight: 400;
   font-size: 2rem;
 }
 
 h3 {
-  font-weight: 300;
+  font-weight: 400;
   font-size: 3rem;
   text-align: center;
   border-bottom: dashed 2px #CCCCCC;
@@ -65,7 +65,7 @@ h3 {
 }
 
 h4 {
-  font-weight: 300;
+  font-weight: 400;
   font-size:2.5rem;
   margin-bottom:3px;
 }
@@ -77,6 +77,11 @@ p, ul {
 
 a i {
   font-size:1.6rem;
+}
+
+span {
+  font-size: 1.6rem;
+  text-align: justify;
 }
 
 mark {
