--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,9 +39,7 @@
         "https://x.com/{{ site.X_username | escape }}",
         "https://linkedin.com/in/{{ site.in_username | escape }}",
         "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}",
-        "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}",
-        "https://www.scopus.com/authid/detail.uri?authorId={{ site.scopus_username | escape }}",
-        "https://neurotree.org/neurotree/peopleinfo.php?pid={{ site.neurotree_username | escape }}"
+        "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}"
       ],
       "jobTitle": "{{ site.jobTitle }}",
       "gender": "{{ site.gender }}",
