--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,7 @@
 <div class="container footer-container">
   <p>
-    <a title="{{ ORCID }}" href="https://orcid.org/{{ site.orcid_username }}">{{ site.orcid_username | escape }}</a>
+        <a href="{{ site.neurotree }}" class="external-link" target="_blank" title="neurotree">
+          <i class="fa-solid fa-seedling">&nbsp;</i>
+        </a>
   </p>
 </div>
