--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container footer-container">
   <p>
-        <a href="{{ site.neurotree }}" class="external-link" target="_blank" title="neurotree">
-          <i class="fa-regular fa-hand-spock">&nbsp;</i>
+        <a href="https://github.com/{{ site.github_username | escape }}" class="external-link" target="_blank" title="GitHub">
+          <i class="fa-solid fa-code-merge">&nbsp;</i>
         </a>
   </p>
 </div>
