--- a/_includes/head.html
+++ b/_includes/head.html
@@ -33,17 +33,12 @@
       "identifier": "{{ site.orcid_username }}",
       "description": "{{ site.meta_description }}",
       "sameAs": [
-        "https://orcid.org/{{ site.orcid_username | escape }}",
         "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
         "https://github.com/{{ site.github_username | escape }}",
         "https://x.com/{{ site.X_username | escape }}",
         "https://linkedin.com/in/{{ site.in_username | escape }}",
-        "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}",
-        "https://www.webofscience.com/wos/author/record/{{ site.wos_username | escape }}"
-      ],
-      "jobTitle": "{{ site.jobTitle }}",
-      "gender": "{{ site.gender }}",
-      "knowsAbout": "{{ site.knowsAbout }}"
+        "https://www.researchgate.net/profile/{{ site.researchgate_username | escape }}"
+      ]
     }
   }
   </script>
