--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container footer-container">
   <p>
-        <a href="https://github.com/{{ site.github_username | escape }}" class="external-link" target="_blank" title="GitHub">
-          <i class="fa-solid fa-code-merge">&nbsp;</i>
+        <a href="https://medium.com/@{{ site.medium_username | escape }}" class="external-link" target="_blank" title="medium">
+          <i class="fa-brands fa-medium">&nbsp;</i>
         </a>
   </p>
 </div>
