--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="container footer-container">
   <p>
-        <a href="https://medium.com/@{{ site.medium_username | escape }}" class="external-link" target="_blank" title="medium">
-          <i class="fa-brands fa-medium">&nbsp;</i>
+        <a href="https://x.com/{{ site.X_username| cgi_escape | escape }}/" class="external-link" target="_blank" title="X">
+          <i class="fa-brands fa-x-twitter">&nbsp;</i>
         </a>
   </p>
 </div>
