--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="container footer-container">
   <p>
-        <a href="https://x.com/{{ site.X_username| cgi_escape | escape }}/" class="external-link" target="_blank" title="X">
+        <a href="https://x.com/{{ site.X_username| cgi_escape | escape }}" class="external-link" target="_blank" title="X">
           <i class="fa-brands fa-x-twitter">&nbsp;</i>
         </a>
   </p>
