--- a/_includes/header.html
+++ b/_includes/header.html
@@ -27,7 +27,7 @@
             </a>
           </li>
         {%- endif -%}
-        {%- if site.X_username -%}
+        {%- if site.github_username -%}
           <li>
             <a title="GitHub" target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-github" title="GitHub"></i>
