--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,14 +14,15 @@
   <meta property="og:site_name" content="{{ site.name }}">
   <meta property="og:type" content="website">
   <link rel="canonical" href="https://{{ site.meta_url }}/">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | relative_url }}?v=5">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | relative_url }}?v=5">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | relative_url }}?v=5">
-  <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}?v=5">
-  <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}?v=5" color="#5bbad5">
-  <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}?v=5">
-  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="theme-color" content="#ffffff">
+  <link rel="apple-touch-icon" sizes="76*76" href="{{ '/apple-touch-icon.png' | relative_url }}?v=6">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ '/favicon-32x32.png' | relative_url }}?v=6">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ '/favicon-16x16.png' | relative_url }}?v=6">
+  <link rel="manifest" href="{{ '/site.webmanifest' | relative_url }}?v=6">
+  <link rel="mask-icon" href="{{ '/safari-pinned-tab.svg' | relative_url }}?v=6" color="#1a1a1a">
+  <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}?v=6">
+
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
