--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -58,6 +58,7 @@ h3 {
   border-bottom: dashed 2px #CCCCCC;
   padding-bottom: 10px;
   margin-bottom:20px;
+  margin-top:20px;
 
   @media print {
     margin-bottom: 20px;
