--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,13 +6,6 @@
     </div>
     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
       <ul class="icons no-print">
-        {%- if site.bluesky_username -%}
-          <li>
-            <a title="Bluesky" target="_blank" href="https://bsky.app/profile/{{ site.bluesky_username | escape }}" class="button button--sacnite button--round-l">
-              <i class="fa-brands fa-bluesky" title="GoogleScholar"></i>
-            </a>
-          </li>
-        {%- endif -%}
         {%- if site.googlescholar_username -%}
           <li>
             <a title="GoogleScholar" target="_blank" href="https://scholar.google.com/citations?user={{ site.googlescholar_username | escape }}" class="button button--sacnite button--round-l">
@@ -31,6 +24,13 @@
           <li>
             <a title="GitHub" target="_blank" href="https://github.com/{{ site.github_username| cgi_escape | escape }}" class="button button--sacnite button--round-l">
               <i class="fa-brands fa-github" title="GitHub"></i>
+            </a>
+          </li>
+        {%- endif -%}
+        {%- if site.discord_username -%}
+          <li>
+            <a title="Discord" target="_blank" href="https://discordapp.com/users/UserID/{{ site.discord_username | escape }}" class="button button--sacnite button--round-l">
+              <i class="fa-brands fa-discord" title="Discord"></i>
             </a>
           </li>
         {%- endif -%}
