--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 {%- include head.html -%}
-<body class="{% if site.darkmode == true and site.darkmode != 'never' %}dark{% endif %}">
+<body>
   {%- include header.html -%}
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
