--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,9 +4,10 @@
       <i style="font-size: 12px;">(Last Update: {{ site.last_update }})</i>
         {{ site.about_content | strip | markdownify }}
     </div>
-    <h3></h3>
-    <div class="col-xs-12">
-        {{ site.papers | strip | markdownify }}
-    </div>
+  </div>
+</div>
+<div class="row clearfix">
+  <div class="col-md-12">
+    {{ site.papers | strip | markdownify }}
   </div>
 </div>
