--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,8 +6,10 @@
     </div>
   </div>
 </div>
-<div class="row clearfix">
-  <div class="col-md-12">
-    {{ site.papers | strip | markdownify }}
+<div class="container">
+  <h3></h3>
+  <div class="row clearfix">
+    <div class="col-xs-12">
+        {{ site.papers | strip | markdownify }}
+    </div>
   </div>
-</div>
