--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,9 @@
 <div class="container footer-container">
-  <p>
-        <a href="https://x.com/{{ site.X_username| cgi_escape | escape }}" class="external-link" target="_blank" title="X">
-          <i class="fa-brands fa-x-twitter">&nbsp;</i>
-        </a>
-  </p>
+<div class="container">
+  <h3></h3>
+  <div class="row clearfix">
+    <div class="col-xs-12">
+        {{ site.links | strip | markdownify }}
+    </div>
+  </div>
 </div>
