--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
       "sameAs": [
         "https://github.com/{{ site.github_username | escape }}",
         "https://linkedin.com/in/{{ site.in_username | escape }}",
-        "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}",
+        "https://scholar.google.com/citations?user={{ site.googlescholar_username| escape }}"
       ]
     }
   }
