--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,3 +13,9 @@
         {{ site.papers | strip | markdownify }}
     </div>
   </div>
+<div class="container footer-container">
+  <h3></h3>
+  <p>
+    {{ site.social | strip | markdownify }}
+  </p>
+</div>
