--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,8 +13,18 @@
         {{ site.papers | strip | markdownify }}
     </div>
   </div>
+</div>
+<div class="container">
+  <h3></h3>
+  <div class="row clearfix">
+    <div class="col-xs-12">
+        {{ site.projects | strip | markdownify }}
+    </div>
+  </div>
+</div>
 <div class="container footer-container">
   <p>
     {{ site.social | strip | markdownify }}
   </p>
 </div>
+
