--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="{{ site.meta_description }}">
   <meta name="robots" content="index, follow">
+  <meta name="google-site-verification" content="1MgdME5GakFn4zbhM1xwEZX70jnMMEiPPBjnKHDyxOs" />
   <link rel="canonical" href="https://{{ site.meta_url }}/">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
