--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-{{%- if site.last_update -%}}
+{% if site.last_update %}
 <div class="container intro-container">
   <div class="row clearfix">
     <div class="col-xs-12">
@@ -7,7 +7,7 @@
     </div>
   </div>
 </div>
-{{%- endif -%}}
+{%- endif %}
 <div class="container">
   <h3></h3>
   <div class="row clearfix">
