--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,6 +16,14 @@
     </div>
   </div>
 </div>
+<div class="container">
+  <h3></h3>
+  <div class="row clearfix">
+    <div class="col-xs-12">
+        {{ site.conferences | strip | markdownify }}
+    </div>
+  </div>
+</div>
 <div class="container footer-container">
     {{ site.social | strip | markdownify }}
 </div>
