--- a/_includes/about.html
+++ b/_includes/about.html
@@ -16,6 +16,7 @@
     </div>
   </div>
 </div>
+{% if site.conferences %}
 <div class="container">
   <h3></h3>
   <div class="row clearfix">
@@ -24,6 +25,7 @@
     </div>
   </div>
 </div>
+{%- endif %}
 <div class="container footer-container">
     {{ site.social | strip | markdownify }}
 </div>
