--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 <div class="container intro-container">
   <div class="row clearfix">
     <div class="col-xs-12">
-      <i style="font-size: 12px;">(Last Update: {{ site.last_update }})</i>
+      <i style="font-size: 12px;">Last Update: {{ site.last_update }}</i>
         {{ site.about_content | strip | markdownify }}
     </div>
   </div>
