--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,15 @@
 <div class="container header-container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
-      <h1>{{ site.name | escape }}</h1>
-      <h2>{{ site.tagline | escape }}</h2>
+  <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
+    <div class="media" style="display: flex; align-items: center;">
+      <img 
+        src="/assets/profile.jpg" 
+        alt="Mo Shakiba" 
+        style="width: 140px; height: auto; margin-right: 20px;">
+      <div class="media-body">
+        <h1 style="margin: 0;">Mo Shakiba</h1>
+        <h2 style="margin: 0;">NeuroAI Researcher</h2>
+      </div>
     </div>
   </div>
 </div>
