--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,6 +9,8 @@
       <div class="media-body">
         <h1 style="margin: 0;">Mo Shakiba</h1>
         <h2 style="margin: 0;">NeuroAI Researcher</h2>
+              <i style="font-size: 12px;">Last Update: {{ site.last_update }}</i>
+                {{ site.about_content | strip | markdownify }}
       </div>
     </div>
   </div>
