--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,12 @@
 {% if site.last_update %}
-<!--div class="container intro-container">
+<--div class="container intro-container">
   <div class="row clearfix">
     <div class="col-xs-12">
       <i style="font-size: 12px;">Last Update: {{ site.last_update }}</i>
         {{ site.about_content | strip | markdownify }}
     </div>
   </div>
-</div -->
+</div>
 {%- endif %}
 <div class="container">
   <h3></h3>
