--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
-<div class="row">
- <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
-   <h1>{{ site.name | escape }}</h1>
-   <h2>{{ site.tagline | escape }}</h2>
+<div class="container header-container">
+   <div class="row">
+     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
+       <h1>{{ site.name | escape }}</h1>
+       <h2>{{ site.tagline | escape }}</h2>
+     </div>
+   </div>
  </div>
-</div>
-</div>
