--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,11 @@
 <div class="container header-container">
-   <div class="row">
-     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-8 header-left">
-       <h1>{{ site.name | escape }}</h1>
-       <h2>{{ site.tagline | escape }}</h2>
-     </div>
-   </div>
- </div>
+  <div class="row" style="display: flex; align-items: center;">
+    <div class="col-xs-4 col-sm-3 col-md-2">
+      <img src="/assets/profile.jpg" alt="{{ site.name }}" style="width: 100%; height: auto;">
+    </div>
+    <div class="col-xs-8 col-sm-9 col-md-10 header-left">
+      <h1>{{ site.name | escape }}</h1>
+      <h2>{{ site.tagline | escape }}</h2>
+    </div>
+  </div>
+</div>
