--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -3,7 +3,7 @@ html {
 
 body {
   background: #ffffff;
-  font-family: "EB Garamond", serif;
+  font-family: "Tenor Sans", sans-serif;
   -webkit-font-smoothing: antialiased; }
 
 .center-text {
