--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,8 +13,8 @@
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
   <script>
     const papers = [
-      { id: "citation-count-meta", doi: "10.1038/s41598-024-62747-z" },
-      { id: "citation-count-heliyon", doi: "10.1016/j.heliyon.2024.e31414" }
+      { id: "srep-meta", doi: "10.1038/s41598-024-62747-z" },
+      { id: "hel-cuonp", doi: "10.1016/j.heliyon.2024.e31414" }
     ];
   
     papers.forEach(paper => {
@@ -23,10 +23,10 @@
         .then(res => res.json())
         .then(data => {
           const count = data.message['is-referenced-by-count'];
-          document.getElementById(paper.id).textContent = `Citation Count: ${count}`;
+          document.getElementById(paper.id).textContent = `[CITATIONS: ${count}]`;
         })
         .catch(() => {
-          document.getElementById(paper.id).textContent = 'Citation data unavailable';
+          document.getElementById(paper.id).textContent = '[CITATIONS: NA]';
         });
     });
   </script>
