--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,22 +8,6 @@
       {%- include about.html -%}
     </div>
   </main>
-  <script>
-    document.querySelectorAll('.citation[data-doi]').forEach(el => {
-      const doi = el.getAttribute('data-doi');
-      const id = el.id;
-  
-      const url = `https://api.crossref.org/works/${encodeURIComponent(doi)}`;
-      fetch(url)
-        .then(res => res.json())
-        .then(data => {
-          const count = data.message['is-referenced-by-count'];
-          el.textContent = `- CITATIONS: ${count} -`;
-        })
-        .catch(() => {
-          el.textContent = '';
-        });
-    });
-  </script>
+  <script src="{{ '/assets/script.js' | relative_url }}"></script>
 </body>
 </html>
