--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,30 @@
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ '/assets/main.css' | relative_url }}">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Person",
+    "name": "Mo Shakiba",
+    "url": "https://moneuron.github.io/",
+    "image": "https://moneuron.github.io/assets/profile.jpg",
+    "jobTitle": "NeuroAI Researcher",
+    "sameAs": [
+      "https://github.com/moneuron",
+      "https://orcid.org/0009-0003-4404-7759",
+      "https://www.researchgate.net/profile/Mo-Shakiba",
+      "https://x.com/moneuron",
+      "https://bsky.app/profile/moneuron.bsky.social",
+      "https://www.kaggle.com/moneuron"
+    ],
+    "description": "Mohammadhosein (Mo) Shakiba is a NeuroAI researcher focusing on biologically inspired deep learning models and computational neuroscience.",
+    "email": "mailto:shakiba@mail.um.ac.ir",
+    "alumniOf": [
+    {
+    "@type": "EducationalOrganization",
+    "name": "Ferdowsi University of Mashhad"
+    }
+    ]
+  }
+  </script>
 </head>
