--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <div class="container header-container">
   <div class="row" style="display: flex; align-items: center;">
     <div class="col-xs-4 col-sm-3 col-md-2">
-      <img src="/assets/profile.jpg" alt="{{ site.name }}" style="width: 100%; height: auto;">
+      <img src="/assets/profile.webp" alt="{{ site.name }}" style="width: 100%; height: auto;">
     </div>
     <div class="col-xs-8 col-sm-9 col-md-10 header-left">
       <h1>{{ site.name | escape }}</h1>
