--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -27,7 +27,7 @@ p {
   margin: 0 0 0.75rem; }
 
 a {
-  color: #3366cc;
+  color: #1d3445;
   text-decoration: none;
   background-color: transparent;
 }
