--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -51,25 +51,6 @@ h2 {
   font-size: 1.8rem;
 }
 
-h3 {
-  font-weight: 500;
-  font-size: 3rem;
-  text-align: center;
-  border-bottom: dashed 2px #CCCCCC;
-  padding-bottom: 10px;
-  margin-bottom:20px;
-
-  @media print {
-    margin-bottom: 20px;
-  }
-}
-
-h4 {
-  font-weight: 500;
-  font-size:2.5rem;
-  margin-bottom:3px;
-}
-
 p, ul {
   font-size: 1.6rem;
   text-align: justify;
@@ -95,4 +76,17 @@ mark {
   border-radius: 3px;
   -webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
+}
+
+mo {
+  font-weight: 500;
+  font-size: 3rem;
+  text-align: center;
+  border-bottom: dashed 2px #CCCCCC;
+  padding-bottom: 10px;
+  margin-bottom:20px;
+
+  @media print {
+    margin-bottom: 20px;
+  }
 }
