--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     "@type": "Person",
     "name": "Mo Shakiba",
     "url": "https://moneuron.github.io/",
-    "image": "https://moneuron.github.io/assets/profile.jpg",
+    "image": "https://moneuron.github.io/assets/profile.webp",
     "jobTitle": "NeuroAI Researcher",
     "sameAs": [
       "https://github.com/moneuron",
