--- a/_sass/type.scss
+++ b/_sass/type.scss
@@ -78,7 +78,7 @@ mark {
   box-shadow: inset 0 -1px 0 rgba(0,0,0,.25);
 }
 
-mo {
+.mo {
   font-weight: 500;
   font-size: 3rem;
   text-align: center;
