--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,5 @@
 <head>
-  <title>{{ site.name }}</title>
+  <title>{{ site.name }} | Work & Research</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,9 +23,10 @@
       "https://github.com/moneuron",
       "https://orcid.org/0009-0003-4404-7759",
       "https://www.researchgate.net/profile/Mo-Shakiba",
-      "https://x.com/moneuron"
+      "https://x.com/moneuron",
+      "https://www.linkedin.com/in/moneuron"
     ],
-    "description": "Mohammadhosein (Mo) Shakiba is a NeuroAI researcher focusing on biologically inspired deep learning models and computational neuroscience.",
+    "description": "Mohammadhosein “Mo” Shakiba is a NeuroAI researcher focusing on biologically inspired deep learning models and computational neuroscience.",
     "email": "mailto:shakiba@mail.um.ac.ir",
     "alumniOf": [
     {
