--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
       "https://x.com/moneuron",
       "https://www.linkedin.com/in/moneuron"
     ],
-    "description": "Mohammadhosein “Mo” Shakiba is a NeuroAI researcher focusing on biologically inspired deep learning models and computational neuroscience.",
+    "description": 'Mohammadhosein "Mo" Shakiba is a NeuroAI researcher focusing on biologically inspired deep learning models and computational neuroscience.',
     "email": "mailto:shakiba@mail.um.ac.ir",
     "alumniOf": [
     {
