--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,6 +5,7 @@
     </div>
     <div class="col-xs-8 col-sm-9 col-md-10 header-left">
       <h1>{{ site.name | escape }}</h1>
+      <h2>{{ site.tagline | escape }}</h2>
       {{ site.about_content | strip | markdownify }}
     </div>
   </div>
