--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
     "name": "Mo Shakiba",
     "url": "https://moneuron.github.io/",
     "image": "https://moneuron.github.io/assets/profile.webp",
-    "jobTitle": "NeuroAI Researcher",
+    "jobTitle": "Researcher",
     "sameAs": [
       "https://github.com/moneuron",
       "https://orcid.org/0009-0003-4404-7759",
