update on image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Mo Shakiba",
-    "url": "https://moneuron.github.io/",
+    "url": "https://moneuron.github.io",
     "image": "https://moneuron.github.io/assets/profile.webp",
     "jobTitle": "Researcher",
     "sameAs": [
