--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,14 +27,7 @@
       "https://x.com/moneuron",
       "https://www.linkedin.com/in/moneuron"
     ],
-    "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on computational neuroscience.",
-    "email": "mailto:shakiba@mail.um.ac.ir",
-    "alumniOf": [
-    {
-    "@type": "EducationalOrganization",
-    "name": "Ferdowsi University of Mashhad"
-    }
-    ]
+    "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on computational neuroscience."
   }
   </script>
 </head>
