--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
       "https://www.researchgate.net/profile/Mo-Shakiba",
       "https://x.com/moneuron"
     ],
-    "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on computational neuroscience."
+    "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on neuroscience and computational physics."
   }
   </script>
 </head>
