--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,8 @@
     </div>
     <div class="col-xs-8 col-sm-9 col-md-10 header-left">
       <h1>{{ site.name | escape }}</h1>
-      <h2>{{ site.about_content | strip | markdownify }}</h2>
+      <h2>{{ site.tagline | escape }}</h2>
+      {{ site.about_content | strip | markdownify }}
     </div>
   </div>
 </div>
