--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,13 +17,17 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Mo Shakiba",
+    "alternateName": ["محمد حسین شکیبا","مو شکیبا", "محمدحسین شکیبا", "Mohammadhosein Shakiba"],
     "url": "https://moneuron.github.io",
     "image": "https://moneuron.github.io/assets/profile.webp",
     "jobTitle": "Researcher",
     "sameAs": [
-      "https://github.com/moneuron",
       "https://www.researchgate.net/profile/Mo-Shakiba",
-      "https://x.com/moneuron"
+      "https://x.com/moneuron",
+      "https://github.com/moneuron",
+      "https://orcid.org/0009-0003-4404-7759",
+      "https://civilica.com/p/518133/",
+      "https://elmnet.ir/eid/p-0058-2814"
     ],
     "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on neuroscience and computational physics."
   }
