--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Mo Shakiba",
-    "alternateName": ["محمد حسین شکیبا","مو شکیبا", "محمدحسین شکیبا", "Mohammadhosein Shakiba"],
+    "alternateName": ["محمد حسین شکیبا","مو شکیبا","محمدحسین شکیبا"],
     "url": "https://moneuron.github.io",
     "image": "https://moneuron.github.io/assets/profile.webp",
     "jobTitle": "Researcher",
