--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,9 +17,8 @@
     "@context": "https://schema.org",
     "@type": "Person",
     "name": "Mo Shakiba",
-    "alternateName": ["محمد حسین شکیبا","مو شکیبا","محمدحسین شکیبا"],
     "url": "https://moneuron.github.io",
-    "image": "https://moneuron.github.io/assets/profile.webp",
+    "image": "https://moneuron.github.io/assets/profile.jpg",
     "jobTitle": "Researcher",
     "sameAs": [
       "https://www.researchgate.net/profile/Mo-Shakiba",
