--- a/_includes/head.html
+++ b/_includes/head.html
@@ -27,7 +27,7 @@
       "https://orcid.org/0009-0003-4404-7759",
       "https://www.linkedin.com/in/moneuron"
     ],
-    "description": "Mohammadhosein 'Mo' Shakiba is a researcher focusing on neuroscience and computational physics."
+    "description": "Mohammadhosein 'Mo' Shakiba is a NeuroAI researcher and a Biophysics Master’s student."
   }
   </script>
 </head>
