--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,4 +10,7 @@
   </main>
   <script src="{{ '/assets/script.js' | relative_url }}"></script>
 </body>
+<footer>
+  {%- include footer.html -%}
+</footer>
 </html>
