--- a/_sass/modern-resume-theme.scss
+++ b/_sass/modern-resume-theme.scss
@@ -139,10 +139,12 @@
 }
 
 .paper-item {
+  display: block;
   opacity: 0;
   transform: translateY(12px);
   animation: fadeUp 0.6s ease forwards;
 }
+
 
 @keyframes fadeUp {
   to {
