--- a/_includes/head.html
+++ b/_includes/head.html
@@ -28,7 +28,7 @@
       "https://www.linkedin.com/in/moneuron",
       "https://scholar.google.com/citations?user=r1sNGGsAAAAJ&hl=en"
     ],
-    "description": "Mohammadhosein 'Mo' Shakiba is a NeuroAI researcher and a Biophysics Master’s student."
+    "description": "Mohammadhosein 'Mo' Shakiba is a CompNeuro / NeuroAI researcher."
   }
   </script>
 </head>
